infra/kube/console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --file=../../docker-compose.prod.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: console
  name: console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: console
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --file=../../docker-compose.prod.yml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/fleetbase-default: "true"
        io.kompose.service: console
    spec:
      containers:
        - image: rg.fr-par.scw.cloud/funcscwmodernwmsc0jozcqg/console_fleetbase:latest
          name: console
          ports:
            - containerPort: 4200
              hostPort: 4200
              protocol: TCP
      restartPolicy: Always
