infra/kube/console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --file=../../docker-compose.prod.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: console
  name: console
spec:
  ports:
    - name: "4200"
      port: 4200
      targetPort: 4200
  selector:
    io.kompose.service: console
